--- a/style.css
+++ b/style.css
@@ -3,10 +3,13 @@ html, body {
     margin: 0;
     display: flex;
     flex-direction: column;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 header {
     border: 1px solid black;
+    font-size: x-large;
+    padding-left: 10px;
 }
 
 footer {
@@ -35,26 +38,18 @@ footer {
     border: 1px solid black;
 }
 
-/* canvas {
-    background-color: palegoldenrod;
-    flex: 1 1 auto;
-    min-height: 0;
-} */
-
 #canvas {
-    width: 300px;      
-    height: 400px;    
-    background-color: palegoldenrod;
+    width: 250;      
+    height: 250;    
+    border-radius: 3px;
   }
 
 .suggestionContainer {
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
 }
 
 .guessContainer {
-    border: 1px solid black;
     max-height: 100px;
     overflow-y: scroll;
 }
@@ -73,23 +68,25 @@ footer {
 .suggestionCard {
     min-height: 15px;
     min-width: 200px;
-    border: 1px solid red;
+    border: 1px solid black;
+    border-radius: 3px;
 }
 
 .guessCard {
     min-height: 15px;
     min-width: 200px;
-    border: 1px solid red;
+    border: 1px solid black;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    border-radius: 3px;
 }
 
 .cluster {
-    border: 1px solid blue;
     border-radius: 20px;
-    padding-top: 1px;
-    padding-bottom: 1px;
-    padding-left: 5px;
-    padding-right: 5px;
+    margin: 2px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 8px;
+    padding-right: 8px;
 }
