--- a/style.css
+++ b/style.css
@@ -67,10 +67,35 @@ h5 {
 
 .mainPanel {
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 4fr 2fr;
     gap: 5px;
     overflow: auto;
     flex: 1;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.noSelect {
+    /* Standard */
+    user-select: none;
+
+    /* WebKit (Safari, Chrome, newer Edge) */
+    -webkit-user-select: none;
+
+    /* Firefox */
+    -moz-user-select: none;
+
+    /* IE/Edge Legacy */
+    -ms-user-select: none;
+}
+
+.scoreBox {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 5px;
 }
 
 /* GUESS FEATURE BOX */
@@ -78,7 +103,7 @@ h5 {
 .guessFeatureArticle {
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow-y: scroll;
     border: 1px solid var(--dark-mid);
     border-radius: 5px;
     padding: 7px;
@@ -117,10 +142,15 @@ h5 {
     text-decoration: underline;
 }
 
+.guessImage {
+    border: 1px solid var(--dark-full);
+    border-radius: 5px;
+}
+
 .distanceBox {
     padding: 2px;
     border-radius: 1px;
-    border: 1px solid var(--bright)
+    border: 1px solid var(--bright);
 }
 
 /* TOP GUESSES */
@@ -128,7 +158,9 @@ h5 {
 .topGuesses {
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    align-items: center;
+    width: 100%;
+    overflow-y: scroll;
     border: 1px solid var(--dark-mid);
     border-radius: 5px;
     padding: 7px;
@@ -140,7 +172,8 @@ h5 {
     border-radius: 10px;
     padding: 10px;
     background-color: var(--light-mid);
-    border: 1px solid var(--dark-full)
+    border: 1px solid var(--dark-full);
+    width: 100%;
 }
 
 .topGuessesContainer {
@@ -154,6 +187,15 @@ h5 {
     flex-direction: row;
     justify-content: center;
     gap: 4px;
+    width: 100%;
+}
+
+.chunksButton {
+    width: 100%;
+}
+
+.keywordsButton {
+    width: 100%;
 }
 
 /* INPUT FORM */
@@ -170,6 +212,7 @@ h5 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 5px;
+    min-height: 43px;
 }
 
 .suggestionWrapper {
@@ -183,6 +226,12 @@ h5 {
     text-align: center;
     background-color: var(--light-mid);
     padding: 5px;
+    font-size: small;
+}
+
+.suggestionCard:hover {
+    background-color: var(--dark-mid);
+    color: var(--light-mid)
 }
 
 .topSuggestionCard {
@@ -193,6 +242,18 @@ h5 {
     border-radius: 3px;
     background-color: var(--light-mid);
     padding: 5px;
+    min-height: 28px;
+    width: 100%;
+}
+
+.topSuggestionCard:hover {
+    background-color: var(--dark-mid);
+    color: var(--light-mid)
+}
+
+.suggestionHighlighted {
+    background-color: var(--dark-mid);
+    color: var(--light-full);
 }
 
 .formContainer {
