--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@
     --dark-full: rgb(18, 18, 18);
     --light-mid: rgb(228, 228, 222);
     --dark-mid: rgb(90, 89, 78);
-    --cold: rgb(238, 238, 147, .6);
-    --warm: rgb(213, 96, 98, .6); 
-    --hot: rgb(243, 119, 72, .6);
-    --blazing: rgb(243, 119, 72, .9);
-  }
+    --one: rgb(32, 74, 150, .2);
+    --two: rgb(0, 180, 255, .2); 
+    --three: rgb(250, 150, 40, .2);
+    --four: rgb(255, 120, 0, .2);
+    --five: rgba(230, 0, 0, .2);
+}
 
 html, body {
     font-family: 'Times New Roman', Times, serif;
@@ -16,6 +17,9 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
+}
+
+body {
     display: flex;
     flex-direction: column;
 }
@@ -69,17 +73,17 @@ h5 {
     display: grid;
     grid-template-columns: 4fr 2fr;
     gap: 5px;
-    overflow: auto;
     flex: 1;
     padding-left: 10px;
     padding-right: 10px;
+    min-height: 0;
 }
 
 .noSelect {
     /* Standard */
     user-select: none;
 
-    /* WebKit (Safari, Chrome, newer Edge) */
+    /* WebKit (Safari, Chrome, Edge) */
     -webkit-user-select: none;
 
     /* Firefox */
@@ -119,17 +123,20 @@ h5 {
 .guessFeatureArticle {
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
     border: 1px solid var(--dark-mid);
     border-radius: 5px;
     padding: 7px;
     gap: 3px;
+    min-height: 0;
 }
 
 .guessFeatureBoxContainer {
     display: flex;
     flex-direction: column;
     gap: 3px;
+    overflow-y: scroll;
+    min-height: 0;
+    flex: 1 1 auto; 
 }
 
 .guessFeatureBox {
@@ -138,13 +145,40 @@ h5 {
     padding: 20px;
     border: 1px solid var(--dark-mid);
     background-color: var(--light-mid);
+    user-select: none;
+}
+
+.skeletonGuessFeatureBox {
+    color: rgb(18, 18, 18);
+    border-radius: 10px;
+    padding: 20px;
+    border: 1px solid var(--dark-mid);
+    background-color: var(--light-mid);
+    user-select: none;
+    animation: loadingBox .5s linear infinite alternate;
+    min-height: 150px;
+}
+
+@keyframes loadingBox {
+    from {opacity: 20%;}
+    to {color: 100%;}
+}
+
+.guessFeatureArticleHeader {
+    margin-bottom: 5px;
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; 
+    gap: 5px; 
+    width: 100%; 
+    padding: 10px;
 }
 
 .guessFeatureTitle {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 5px;
 }
 
 .guessFeatureArticleTitle {
@@ -181,25 +215,21 @@ h5 {
 .topGuesses {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    /* width: 100%; */
     overflow-y: scroll;
     border: 1px solid var(--dark-mid);
     border-radius: 5px;
     padding: 7px;
-    gap: 4px;
+    gap: 10px;
 }
 
 .topGuessesBox {
     display: flex;
     flex-direction: column;
     gap: 3px;
-    /* color: var(--dark-full); */
     border-radius: 10px;
     padding: 10px;
     background-color: var(--light-mid);
     border: 1px solid var(--dark-full);
-    /* width: 100%; */
     user-select: none;
 }
 
@@ -225,9 +255,20 @@ h5 {
     display: flex;
     flex-direction: column;
     gap: 4px;
+    overflow-y: scroll;
+    min-height: 0;
+    flex: 1 1 auto; 
 }
 
 .topGuessesArticleHeader {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3px;
+    user-select: none;
+}
+
+.topGuessesArticleSubHeader {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -241,6 +282,21 @@ h5 {
 
 .keywordsButton {
     width: 100%;
+}
+
+/* TOP KEYWORDS */
+
+.topKeywordsBox {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 3px;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: var(--light-mid);
+    border: 1px solid var(--dark-full);
+    user-select: none;
+    font-weight: bold;
 }
 
 /* INPUT FORM */
@@ -298,7 +354,7 @@ h5 {
     opacity: 75%;
 }
 
-.suggestionHighlighted {
+.boxHighlighted {
     background-color: var(--dark-mid);
     color: var(--light-full);
 }
