--- a/style.css
+++ b/style.css
@@ -134,34 +134,35 @@ h5 {
     display: flex;
     flex-direction: column;
     gap: 3px;
-    overflow-y: scroll;
     min-height: 0;
     flex: 1 1 auto; 
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: var(--dark-mid) transparent;
 }
 
 .guessFeatureBox {
     color: rgb(18, 18, 18);
     border-radius: 10px;
     padding: 20px;
-    border: 1px solid var(--dark-mid);
+    border: 3px solid var(--dark-mid);
     background-color: var(--light-mid);
     user-select: none;
 }
 
 .skeletonGuessFeatureBox {
-    color: rgb(18, 18, 18);
     border-radius: 10px;
     padding: 20px;
-    border: 1px solid var(--dark-mid);
-    background-color: var(--light-mid);
+    border: 3px solid var(--dark-mid);
+    background-color: var(--dark-mid);
     user-select: none;
     animation: loadingBox .5s linear infinite alternate;
     min-height: 150px;
 }
 
 @keyframes loadingBox {
-    from {opacity: 20%;}
-    to {color: 100%;}
+    from {opacity: 5%;}
+    to {opacity: 30%;}
 }
 
 .guessFeatureArticleHeader {
@@ -215,7 +216,7 @@ h5 {
 .topGuesses {
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: hidden;
     border: 1px solid var(--dark-mid);
     border-radius: 5px;
     padding: 7px;
@@ -255,9 +256,11 @@ h5 {
     display: flex;
     flex-direction: column;
     gap: 4px;
-    overflow-y: scroll;
     min-height: 0;
     flex: 1 1 auto; 
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: var(--dark-mid) transparent;
 }
 
 .topGuessesArticleHeader {
@@ -272,6 +275,14 @@ h5 {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    gap: 4px;
+    width: 100%;
+}
+
+.topGuessesArticleSubHeaderSmall {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     gap: 4px;
     width: 100%;
 }
@@ -331,12 +342,11 @@ h5 {
 }
 
 .suggestionCard:hover {
-    /* background-color: var(--dark-mid);
-    color: var(--light-mid); */
     opacity: 75%;
 }
 
 .topSuggestionCard {
+    width: 100%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
     font-size: 25px;
@@ -345,13 +355,14 @@ h5 {
     background-color: var(--light-mid);
     padding: 5px;
     min-height: 28px;
-    width: 100%;
 }
 
 .topSuggestionCard:hover {
-    /* background-color: var(--dark-mid);
-    color: var(--light-mid); */
     opacity: 75%;
+}
+
+.topSuggestionBox {
+    width: 100%;
 }
 
 .boxHighlighted {
@@ -360,8 +371,6 @@ h5 {
 }
 
 .formContainer {
-    /* display: grid; */
-    /* grid-template-columns: 1fr 2fr 1fr; */
     margin-top: 5px;
 }
 
