--- a/tailwind.css
+++ b/tailwind.css
@@ -572,6 +572,12 @@
   .bg-current {
     background-color: currentcolor;
   }
+  .bg-gray-500\/60 {
+    background-color: color-mix(in srgb, oklch(55.1% 0.027 264.364) 60%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-gray-500) 60%, transparent);
+    }
+  }
   .bg-neutral-300 {
     background-color: var(--color-neutral-300);
   }
